# lifocalc

./: Cargo.toml  README.md  TODO.md
config/: default-config.toml
plans/: 0001.md
src/: app.rs  config.rs  history.rs  keybindings.rs  lib.rs  main.rs  ui.rs
src/engine/: errors.rs  eval.rs  functions.rs  mod.rs  number.rs  parse.rs  units.rs
tests/: yaml_cases.rs
tests/cases/: 0001.yaml  0002.yaml  0003.yaml  0004.yaml  0005.yaml  0006.yaml  0007.yaml  0008.yaml  0009.yaml  0010.yaml  0011.yaml  0012.yaml  0013.yaml  0014.yaml  0015.yaml  0016.yaml  0017.yaml  0018.yaml  0019.yaml  0020.yaml  0021.yaml  0022.yaml  0023.yaml  0024.yaml  0025.yaml  0026.yaml  0027.yaml  0028.yaml  division_by_zero_error.yaml  prompt_expression_on_global_stack.yaml  prompt_local_expression.yaml  push_expression_result.yaml  push_numbers.yaml
